--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,14 @@ body {
   padding-bottom: 20px;
 }
 
+h2.ng-binding {
+  text-align: center;
+}
+
+li.active {
+  background-color: blue;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
