--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,15 +1,16 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  /*padding-top: 20px;*/
   padding-bottom: 20px;
 }
 
-h2.ng-binding {
-  text-align: center;
-}
 
 li.active {
   background-color: blue;
+}
+
+a {
+  color: #fff;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -30,13 +31,6 @@ li.active {
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 
 /* Customize container */
@@ -72,6 +66,18 @@ div#login div {
   margin-top: 28px;
 }
 
+div.view {
+  margin-left: 300px;  
+}
+
+@media screen and (max-width: 600px) {
+  
+  div.view {
+    text-align: center;
+    margin: auto;  
+  }
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
@@ -88,5 +94,5 @@ div#login div {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
-  }
+  }  
 }
