--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,16 +1,16 @@
 <div id="home" class="row">
   <div class="large-6 large-offset-3">
-    <h2>Welcome to the {{ title }} page!</h2>
+    <h2>You order We deliver</h2>
 
-    <div class="alert-box">{{ message }}</div>
+    <!-- <div class="alert-box">{{ message }}</div> -->
 
     <ul class="small-block-grid-2">
-      <li>
-        <img class="th" src="images/demo1.jpg" shows-message-when-hovered message="Im the first house.">
-      </li>
-      <li>
-        <img class="th" src="images/demo2.jpg" shows-message-when-hovered message="Im the second house.">
-      </li>
+      <div class='homeview'>
+        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-1.jpg" shows-message-when-hovered message="Im the first house.">
+      </div>
+      <div>
+        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-2.jpg" shows-message-when-hovered message="Im the second house.">
+      </div>
     </ul>    
   </div>
 </div>
