--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,10 +6,10 @@
 
     <ul class="small-block-grid-2">
       <div class='homeview'>
-        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-1.jpg" shows-message-when-hovered message="Im the first house.">
+        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-1.jpg">
       </div>
       <div>
-        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-2.jpg" shows-message-when-hovered message="Im the second house.">
+        <img class="img-responsive" alt="Responsive image" src="images/home-slider-slide-2.jpg">
       </div>
     </ul>    
   </div>
